--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ Django==5.0.2
 django-debug-toolbar==4.3.0
 django-filter==23.5
 djangorestframework==3.14.0
+gunicorn==21.2.0
+h11==0.14.0
 idna==3.6
 mypy-extensions==1.0.0
 packaging==23.2
@@ -22,3 +24,4 @@ soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2024.1
 urllib3==2.2.1
+uvicorn==0.27.1
