--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+attrs==23.2.0
 beautifulsoup4==4.12.3
 black==24.2.0
 certifi==2024.2.2
@@ -9,9 +10,13 @@ Django==5.0.2
 django-debug-toolbar==4.3.0
 django-filter==23.5
 djangorestframework==3.14.0
+drf-spectacular==0.27.1
 gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
+inflection==0.5.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
@@ -19,9 +24,13 @@ platformdirs==4.2.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.33.0
 requests==2.31.0
+rpds-py==0.18.0
 soupsieve==2.5
 sqlparse==0.4.4
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.27.1
